public/css/components/sidebar.less
/* =========================================================================== *
 *  home page
 * =========================================================================== */
body.page-home > .cv-main-sidebar {
  top: unit(74 + 20, px);
  left: 0;

  .cv-main-logo {display: none}

  .sidebar-link-svg {fill: @color-neutral-xx-mid}
  .sidebar-heading {color: @color-neutral-mid}
  .sidebar-link-badge {border-color: @color-white}

  .sidebar-link {
    color: @color-neutral-dark;

    &::after {
      content: '';
      z-index: -1;
      position: absolute;
      top: 0;
      left: 10px;
      width: 170px;
      bottom: 0;
      background-color: fade(@color-primary, 5%);
      border-radius: 3px;
      opacity: 0;
    }

    &:hover {
      .sidebar-link-svg {fill: @color-primary}
      &::after {opacity: 1}
    }

    &.active {
      color: @color-primary;
      .sidebar-link-svg {fill: @color-primary}
      &::before {opacity: 1}
    }
  }
}

/* =========================================================================== *
 *  inner pages
 * =========================================================================== */
body.page-inner > .cv-main-sidebar {
  top: 0;
  left: -(@cv-sidebar-width - @cv-sidebar-collapsed-width);
  overflow: hidden;
  background-color: @color-neutral-xxx-dark;
  transition: transform 400ms ease-in-out;

  .sidebar-nav {
    transform: translateX(@cv-sidebar-width - @cv-sidebar-collapsed-width);
    transition: transform 400ms ease-in-out;
  }

  .cv-main-logo-type,
  .sidebar-heading,
  .sidebar-link-label {
    opacity: 0;
    transition: opacity 240ms ease;
  }

  .sidebar-link {
    color: @color-neutral-light;
    &::before {border-radius: 0}

    &:hover {
      background-color: fade(@color-primary, 5%);
      &::before {transform: translateX(0)}
    }

    &.active {
      color: @color-white;
      background-color: @color-primary;
      .sidebar-link-svg {fill: @color-white}
    }
  }

  .sidebar-link-svg {fill: @color-neutral-x-mid}
  .sidebar-heading {color: @color-neutral-dark}
  .sidebar-link-badge {border-color: @color-neutral-xxx-dark}
}

body.page-inner > .cv-main-sidebar .cv-main-logo {
  margin-bottom: 25px;
  background-color: @color-black;

  .logo-type-cv {color: @color-white}
  .logo-type-by {color: @color-grey}
}

body.page-inner > .cv-main-sidebar.-is-expanded {
  .sidebar-nav {transform: translateX(0)}

  .cv-main-logo-type,
  .sidebar-heading,
  .sidebar-link-label {opacity: 1}
}

/* =========================================================================== *
 *  globally shared
 * =========================================================================== */
body > .cv-main-sidebar {
  position: fixed;
  z-index: 2;
  width: @cv-sidebar-width;
  bottom: 0;
  transform: translateZ(0);

  .cv-main-logo {height: @cv-header-height}
}

body > .cv-main-sidebar.-is-expanded {
  transform: translateX(@cv-sidebar-width - @cv-sidebar-collapsed-width) translateZ(0);
}

.sidebar-nav {height: 100%}

.sidebar-link,
.sidebar-heading {padding-left: 1.5em}

.sidebar-link {
  position: relative;
  font-size: 14px;
  display: block;
  height: 36px;
  padding-top: 10px;
  white-space: nowrap;
  &:extend(.-tdn);
  transition: color 240ms ease;
  will-change: transform;

  &:hover .sidebar-link-svg {animation: ui-zoomit 300ms ease}
}

.sidebar-link::before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  width: 7px;
  height: 100%;
  border-radius: 0 2px 2px;
  background-color: @color-primary;
  transform: translateX(-7px);
  transition: transform 124ms ease;
}

.sidebar-link-svg {
  width: 16px;
  height: 16px;
  transition: fill 240ms ease;
}

.sidebar-link-badge.ui-badge {
  left: 31px;
  top: 0;
}

.sidebar-link-label {
  padding-left: .5em;
  line-height: 1.25em;
}

.sidebar-heading {
  font-size: 10px;
  margin-top: 2em;

  .-font-semi-bold;
}

.sidebar-link-help-support {
  position: absolute;
  left: 0;
  bottom: 15px;
  width: 100%;
}

.sidebar-link-messages {
  .unread {display: none}
  .read {display: block}

  &.has-messages {
    .unread {display: block}
    .read {display: none}
  }
}

